// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhoneChallengeTransformer Tests should create SMS challenge UI elements when phone number not available 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {},
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.phone.verify.title",
        },
        "type": "Title",
      },
      Object {
        "options": Object {
          "content": "oie.phone.verify.sms.codeSentText oie.phone.alternate.title. oie.phone.verify.enterCodeText",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      Object {
        "label": "mfa.challenge.verify",
        "options": Object {
          "type": "submit",
        },
        "scope": "#/properties/submit",
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`PhoneChallengeTransformer Tests should create SMS challenge UI elements when resend code is NOT available 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {},
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.phone.verify.title",
        },
        "type": "Title",
      },
      Object {
        "options": Object {
          "content": "oie.phone.verify.sms.codeSentText +1 XXX-XXX-4601. oie.phone.verify.enterCodeText",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      Object {
        "label": "mfa.challenge.verify",
        "options": Object {
          "type": "submit",
        },
        "scope": "#/properties/submit",
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`PhoneChallengeTransformer Tests should create SMS challenge UI elements when resend code is available 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {},
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "action": [Function],
          "ctaText": "oie.phone.verify.sms.resendText",
          "linkLabel": "email.button.resend",
        },
        "type": "Reminder",
      },
      Object {
        "options": Object {
          "content": "oie.phone.verify.title",
        },
        "type": "Title",
      },
      Object {
        "options": Object {
          "content": "oie.phone.verify.sms.codeSentText +1 XXX-XXX-4601. oie.phone.verify.enterCodeText",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      Object {
        "label": "mfa.challenge.verify",
        "options": Object {
          "type": "submit",
        },
        "scope": "#/properties/submit",
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`PhoneChallengeTransformer Tests should create voice challenge UI elements when phoneNumber is available 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {},
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.phone.verify.title",
        },
        "type": "Title",
      },
      Object {
        "options": Object {
          "content": "mfa.calling +1 XXX-XXX-4601. oie.phone.verify.enterCodeText",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      Object {
        "label": "mfa.challenge.verify",
        "options": Object {
          "type": "submit",
        },
        "scope": "#/properties/submit",
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`PhoneChallengeTransformer Tests should create voice challenge UI elements when phoneNumber not available 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {},
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.phone.verify.title",
        },
        "type": "Title",
      },
      Object {
        "options": Object {
          "content": "mfa.calling oie.phone.alternate.title. oie.phone.verify.enterCodeText",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      Object {
        "label": "mfa.challenge.verify",
        "options": Object {
          "type": "submit",
        },
        "scope": "#/properties/submit",
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
